iptables/00-iptables.up.rules/20151012_iptables.up.rules
# Generated by iptables-save v1.4.21 on Wed Mar 18 11:00:30 2015
*mangle
:PREROUTING ACCEPT [35:8271]
:INPUT ACCEPT [22:1874]
:FORWARD ACCEPT [4:358]
:OUTPUT ACCEPT [23:4511]
:POSTROUTING ACCEPT [27:4869]
COMMIT
# Completed on Wed Mar 18 11:00:30 2015
# Generated by iptables-save v1.4.21 on Wed Mar 18 11:00:30 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Wed Mar 18 11:00:30 2015
# Generated by iptables-save v1.4.21 on Wed Mar 18 11:00:30 2015
*filter
:OUTPUT ACCEPT [0:0]
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:filter_hackers - [0:0]
:allowed_sites - [0:0]
:log_allow - [0:0]
:log_allow_special - [0:0]
:log_deny - [0:0]
:tcp_attack - [0:0]
-A INPUT -j allowed_sites
-A INPUT -j filter_hackers
-A INPUT -j log_deny
-A FORWARD -j allowed_sites
-A FORWARD -j filter_hackers
-A FORWARD -j log_deny
# DROP INVALID SYN PACKETS
-A OUTPUT -p tcp ! --syn -m state --state NEW -j DROP
-A log_allow -j LOG --log-prefix 'FIREWALL_ALLOW' --log-level 4
-A log_allow -j ACCEPT
-A log_allow_special -j LOG --log-prefix 'FIREWALL_ALLOW_SPECIAL' --log-level 4
-A log_allow_special -j ACCEPT
-A log_deny -j LOG --log-prefix 'FIREWALL_DENY' --log-level 4
-A log_deny -j DROP
-A filter_hackers -j tcp_attack
-A tcp_attack -f -j DROP
-A tcp_attack -p tcp ! --syn -m state --state NEW -j DROP
-A tcp_attack -p tcp --tcp-flags ALL ALL -j DROP
-A tcp_attack -p tcp --tcp-flags ALL NONE -j DROP
-A tcp_attack -p tcp --tcp-flags ALL ACK,RST,SYN,FIN -j DROP
-A tcp_attack -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A tcp_attack -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A tcp_attack -m state --state INVALID -j DROP
-A filter_hackers -s 0.0.0.0/0 -i em1 -j log_deny
-A allowed_sites -s 127.0.0.1/32 -d 127.0.0.1/32 -i lo -j ACCEPT
-A allowed_sites -s 8.8.8.8/32 -j ACCEPT
-A allowed_sites -s 10.0.0.0/24 -j ACCEPT
-A allowed_sites -s 14.52.102.0/24 -j ACCEPT
-A allowed_sites -s 168.126.63.1/24 -j ACCEPT
-A allowed_sites -s 39.7.53.0/24 -j ACCEPT
-A allowed_sites -s 211.224.204.128/25 -j ACCEPT
-A allowed_sites -s 103.246.57.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 103.246.57.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 110.68.0.0/14 -i em1 -j ACCEPT
-A allowed_sites -s 118.33.113.9/32 -i em1 -j ACCEPT
-A allowed_sites -s 147.6.1.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 192.168.0.0/24 -j ACCEPT
-A allowed_sites -s 121.134.209.128/25 -i em1 -j ACCEPT
-A allowed_sites -s 121.188.105.128/25 -i em1 -j ACCEPT
-A allowed_sites -s 125.138.98.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 175.209.35.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 175.216.0.0/13 -i em1 -j ACCEPT
-A allowed_sites -s 175.223.26.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 175.223.16.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 110.70.58.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 192.168.0.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 192.168.1.0/31 -i em1 -j ACCEPT
-A allowed_sites -s 210.183.241.128/25 -i em1 -j ACCEPT
-A allowed_sites -s 218.144.90.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 220.123.31.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 222.112.0.0/13 -i em1 -j ACCEPT
-A allowed_sites -s 222.118.131.0/24 -j ACCEPT
-A allowed_sites -s 222.118.0.0/16 -i em1 -j ACCEPT
-A allowed_sites -s 220.123.122.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 221.151.188.0/24 -i em1 -j ACCEPT
-A allowed_sites -s 221.151.100.0/24 -j ACCEPT
-A allowed_sites -s 211.100.0.0/16 -j ACCEPT
-A allowed_sites -s 192.168.0.0/16 -j ACCEPT
-A allowed_sites -s 172.16.0.0/16 -j ACCEPT
-A allowed_sites -s 183.107.106.204/32 -j ACCEPT
-A allowed_sites -s 223.33.160.0/24 -j ACCEPT
-A allowed_sites -p udp --dport 53:54 -j ACCEPT
-A allowed_sites -p udp --dport 67:68 -j ACCEPT
-A allowed_sites -m conntrack --ctstate RELATED,ESTABLISHED -j log_allow
-A allowed_sites -p icmp -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT
#WiMS
-A allowed_sites -s 218.55.236.140/24 -j ACCEPT

COMMIT
# Completed on Wed Mar 18 11:00:30 2015
