iptables/00-iptables.up.rules/20151013_iptables.up.rules
# Generated by iptables-save v1.4.21 on Wed Mar 18 11:00:30 2015
*mangle
:PREROUTING ACCEPT [35:8271]
:INPUT ACCEPT [22:1874]
:FORWARD ACCEPT [4:358]
:OUTPUT ACCEPT [23:4511]
:POSTROUTING ACCEPT [27:4869]
COMMIT
# Completed on Wed Mar 18 11:00:30 2015
# Generated by iptables-save v1.4.21 on Wed Mar 18 11:00:30 2015
*nat
:PREROUTING ACCEPT [0:0]
#:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Wed Mar 18 11:00:30 2015
# Generated by iptables-save v1.4.21 on Wed Mar 18 11:00:30 2015
*filter
:OUTPUT ACCEPT [0:0]
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:filter_hackers - [0:0]
:allowed_sites - [0:0]
:trusted_zones - [0:0]
:ktrnd_sites - [0:0]
:log_allow - [0:0]
:log_allow_special - [0:0]
:log_deny - [0:0]
:tcp_attack - [0:0]
-A INPUT -j allowed_sites
-A INPUT -j filter_hackers
-A INPUT -j log_deny
-A FORWARD -j allowed_sites
-A FORWARD -j filter_hackers
-A FORWARD -j log_deny
# DROP INVALID SYN PACKETS
-A OUTPUT -p tcp ! --syn -m state --state NEW -j DROP
-A log_allow -j LOG --log-prefix 'FIREWALL_ALLOW' --log-level 4
-A log_allow -j ACCEPT
-A log_allow_special -j LOG --log-prefix 'FIREWALL_ALLOW_SPECIAL' --log-level 4
-A log_allow_special -j ACCEPT
-A log_deny -j LOG --log-prefix 'FIREWALL_DENY' --log-level 4
-A log_deny -j DROP
-A filter_hackers -j tcp_attack
-A tcp_attack -f -j DROP
-A tcp_attack -p tcp ! --syn -m state --state NEW -j DROP
-A tcp_attack -p tcp --tcp-flags ALL ALL -j DROP
-A tcp_attack -p tcp --tcp-flags ALL NONE -j DROP
-A tcp_attack -p tcp --tcp-flags ALL ACK,RST,SYN,FIN -j DROP
-A tcp_attack -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A tcp_attack -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A tcp_attack -m state --state INVALID -j DROP
-A filter_hackers -s 0.0.0.0/0 -j log_deny
-A allowed_sites -j ktrnd_sites
-A allowed_sites -j trusted_zones
-A allowed_sites -p udp --dport 53:54 -j ACCEPT
-A allowed_sites -p udp --dport 67:68 -j ACCEPT
-A allowed_sites -m conntrack --ctstate RELATED,ESTABLISHED -j log_allow
-A allowed_sites -p icmp -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT
# KT R&D Sites
-A ktrnd_sites -s 10.0.0.0/24 -j ACCEPT
-A ktrnd_sites -s 127.0.0.1/32 -d 127.0.0.1/32 -i lo -j ACCEPT
-A ktrnd_sites -s 211.224.204.128/25 -j ACCEPT
-A ktrnd_sites -s 221.151.188.0/24 -j ACCEPT
# DJ 4th floor
-A ktrnd_sites -s 222.118.131.0/24 -j ACCEPT
# Trusted Zones
-A trusted_zones -s 192.168.0.0/24 -j ACCEPT
-A trusted_zones -s 192.168.1.0/24 -j ACCEPT
-A trusted_zones -s 192.168.2.0/24 -j ACCEPT
-A trusted_zones -s 192.168.10.0/24 -j ACCEPT
# Vagrant
-A trusted_zones -s 10.0.2.0/24 -j ACCEPT
#WiMS
-A trusted_zones -s 218.55.236.140/24 -j ACCEPT
#insoft
-A trusted_zones -s 123.212.42.21 -j ACCEPT
-A trusted_zones -s 123.212.42.40 -j ACCEPT
-A trusted_zones -s 123.212.42.41 -j ACCEPT
-A trusted_zones -s 123.212.42.42 -j ACCEPT
-A trusted_zones -s 123.212.42.43 -j ACCEPT
-A trusted_zones -s 123.212.42.46 -j ACCEPT
-A trusted_zones -s 125.138.110.183 -j ACCEPT
COMMIT
# Completed on Wed Mar 18 11:00:30 2015
